Changes with Apache 1.3.24

  *) The Location: response header field, used for external
     redirect, *must* be an absoluteURI.  The Redirect directive
     tested for that, but RedirectMatch didn't -- it would allow
     almost anything through.  Now it, too, will correctly varf
     if the redirection target isn't an absoluteURI.  [Ken Coar]

  *) apxs: fix bug that prevented -S option from containing quotes.
     [Ben Laurie]

  *) ftp proxy: various cosmetic and functional improvements
     - Allow for /%2f hack (to access the root directory / )
     - properly escape generated links in dir listing
     - do directory listings in ASCII, to avoid problems with EBCDIC
       servers
     - close data & control channels to server properly
     [Martin Kraemer]

  *) NetWare: Added mod_auth_dbm to the project file.  
     [Brad Nicholes bnicholes@novell.com]


Changes with Apache 1.3.23
 
  *) Changed the symbol mapping of the following from API_EXPORT
     to API_EXPORT_NONSTD:
         ap_snprintf(), ap_table_do(), ap_bvputs(), ap_log_error(),
         ap_log_rerror(), ap_log_printf(), ap_rprintf()
     [William Rowe]

  *) Fixed a number of mismatched int sizes and signedness problems.
     Still remains, MSVC's 'interesting' declaration of FD_SET still emits
     (impotent) warnings.  [William Rowe]

  *) mod_proxy changes:

    *) Bug fix for ap_proxy_cache_conditional(), unititialized wetag
       [Zvi Har'El <rl@math.technion.ac.il>]

    *) Add persistent connection handling
       The patch changes mod_proxy to write the reply-headers using
       ap_send_http_header() instead of directly using ap_bvputs(). This not
       only simplifies mod_proxy, in my opinion at least, but enables it to
       make use of the features of Apache's normal header and persistent
       connection machinery.
       [Christian von Roques <roques@mti.ag>]

    *) Graham Leggett's original 1.3.12 patch, updated for 1.3.19+
       Original comments:
